--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="love-text-box">
                 <p>You've become such an important part of my life that it's impossible to imagine life without you anymore😭😭.</p>
                 <p>Meri cutuuuu 😚😚,You've made me more hardworking, more focused, and more determined towards my goals.</p>
-                <p>You've helped me academically, emotionally, and mentally, and physically😉😏 and I don't think I'll ever be able to thank you enough for that.</p>
+                <p>You've helped me academically, emotionally, mentally, and physically😉😏 and I don't think I'll ever be able to thank you enough for that.</p>
                 <p>Aur tu kitni cutee hote jaa rhi haiii😭😭😭😭😭😭, like jab bhi main teko dekhta hu and you're just cuter everytime😭</p>
                 <p>You're 5'3(5'2) and I am 6'3😏, and I'll have to bend down to kiss, and I'd do that a million times without complaining😚.</p>
                 <p>Teri annkhheeeiiinnnnnnnnn😩itniiii sundarrr😩, Tere curves😭, Tera figure( dekhna baaki hi hai vaise toh😏) mera type haii😭😭, Curvyy with a lil chubbiness(realllyyy attractive btw), Tere baal baandhe hue, khule, messy sab acche lagte hai(yk meko konsa jyada psnd hai😏), and main toh tera waistaholic huu😩, aisa ho hi nhi skta ki apan mile and I haven't grabbed your waist😭. And meri love language physical touch hai toh main toh chipak ke hi rehta hu😚.</p>
